[package]
name = "alexlillianwedding"
version = "0.1.0"
authors = ["Alex"]

[dependencies]
maud = { version = "0.17.2", features = ["rocket"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }